nats-micro/tests/ui/v4_invalid_test_threads.rs
#[nats_micro::test(worker_threads = 2)]
async fn invalid_threads() {}

fn main() {}
